syntax = "proto3";
option java_package = "models.proto.requests";
option java_generate_equals_and_hash = true;
import "PublishRequestHeader.proto";
import "Record.proto";

message PublishRequestData {
  repeated Record data = 1;
}

