syntax = "proto3";

option java_generate_equals_and_hash = true;
option java_package = "models.proto.requests";


message PublishRequestHeader {
  string key = 1;
  string topic = 2;
}

