syntax = "proto3";
import "RecordMeta.proto";
option java_package = "models.proto.responses";
option java_generate_equals_and_hash = true;

message PublishResponse {
  repeated RecordMeta data = 1;
}

